--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   flutter_local_notifications: ^17.1.2
   shared_preferences: ^2.2.3
   timezone: ^0.9.2
+  firebase_core: ^2.25.4
+  firebase_auth: ^4.17.5
 
 dev_dependencies:
   flutter_test:
