--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,9 @@ dependencies:
   flutter_local_notifications: ^17.1.2
   shared_preferences: ^2.2.3
   timezone: ^0.9.2
-  firebase_core: ^2.25.4
-  firebase_auth: ^4.17.5
+  firebase_core: ^3.6.0
+  firebase_auth: ^5.4.0
+  cloud_firestore: ^5.4.4
 
 dev_dependencies:
   flutter_test:
