--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   firebase_core: ^4.0.0
   firebase_auth: ^6.0.0
   cloud_firestore: ^6.0.0
-  flutter_local_notifications: ^16.1.0
+  flutter_local_notifications: 13.0.0
   flutter_background_service: ^5.0.1
 
 dev_dependencies:
