--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission/RECEIVE_BOOT_COMPLETED" />
 
     <application
         android:label="reduce_smoking_app"
@@ -20,9 +20,11 @@
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
             android:hardwareAccelerated="true"
             android:windowSoftInputMode="adjustResize">
+
             <meta-data
                 android:name="io.flutter.embedding.android.NormalTheme"
                 android:resource="@style/NormalTheme" />
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -36,7 +38,7 @@
             android:name=".notifications.NotificationPublisher"
             android:exported="true" />
 
-        <!-- دکمه‌های نوتیف (Smoke/Skip). exported باید true باشد -->
+        <!-- دکمه‌های نوتیف (Smoke/Skip) -->
         <receiver
             android:name=".notifications.ActionReceiver"
             android:exported="true" />
@@ -45,6 +47,11 @@
         <receiver
             android:name=".notifications.ReminderReceiver"
             android:exported="true" />
+
+        <!-- بستن نوتیف تایمر بعد از پایان ۵ دقیقه -->
+        <receiver
+            android:name=".notifications.SmokingWindowEndReceiver"
+            android:exported="false" />
 
         <!-- باززمان‌بندی بعد از ریبوت (اختیاری) -->
         <receiver
