--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!-- Permissions (بیرون از <application>) -->
+    <!-- Permissions -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
-    <uses-permission android:name="android.permission/RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
         android:label="reduce_smoking_app"
@@ -33,36 +33,20 @@
 
         <meta-data android:name="flutterEmbedding" android:value="2" />
 
-        <!-- اگر از NotificationPublisher استفاده می‌کنی بگذار؛ وگرنه حذفش کن -->
-        <receiver
-            android:name=".notifications.NotificationPublisher"
-            android:exported="true" />
-
-        <!-- دکمه‌های نوتیف (Smoke/Skip) -->
-        <receiver
-            android:name=".notifications.ActionReceiver"
-            android:exported="true" />
-
-        <!-- سازندهٔ نوتیف «Time to smoke?» -->
+        <!-- نوتیف زمان سیگار -->
         <receiver
             android:name=".notifications.ReminderReceiver"
             android:exported="true" />
 
-        <!-- بستن نوتیف تایمر بعد از پایان ۵ دقیقه -->
+        <!-- دکمه‌های Smoke / Skip -->
+        <receiver
+            android:name=".notifications.ActionReceiver"
+            android:exported="true" />
+
+        <!-- بستن نوتیف تایمر بعد از ۵ دقیقه -->
         <receiver
             android:name=".notifications.SmokingWindowEndReceiver"
             android:exported="false" />
-
-        <!-- باززمان‌بندی بعد از ریبوت (اختیاری) -->
-        <receiver
-            android:name=".notifications.BootReceiver"
-            android:enabled="true"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
-                <action android:name="android.intent.action.LOCKED_BOOT_COMPLETED" />
-            </intent-filter>
-        </receiver>
 
     </application>
 
